--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^2.0.0",
     "@clerk/nextjs": "^5.0.1",
     "next": "14.2.2",
     "react": "^18",
