--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/localizations": "^2.0.0",
     "@clerk/nextjs": "^5.0.1",
+    "lucide-react": "^0.376.0",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18"
