--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@clerk/localizations": "^2.0.0",
     "@clerk/nextjs": "^5.0.1",
+    "@libsql/client": "^0.6.0",
     "@serwist/next": "^9.0.2",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.10",
     "lucide-react": "^0.376.0",
     "next": "14.2.2",
     "react": "^18",
@@ -21,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.21.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "serwist": "^9.0.2",
